# Wolfenstein3D-Raylib-C

./: .gitignore  CMakeLists.txt  Makefile  run.sh  todo_list.md
resources/shaders/: floor_ceiling.frag  floor_ceiling.vert  wall.frag  wall.vert
src/Core/: game.c  game.h  main.c  resources.c  resources.h
src/Rendering/: renderer.c  renderer.h
src/World/: map.c  map.h  player.c  player.h
